--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -12,7 +12,7 @@
   <h1>Хорошего дня!</h1>
   <p>Наставник!</p>
 
-  <img src="/img/1.jpg">
+  <img src="/my-first-project/img/1.jpg">
   <img src="../../img/2.jpg">
 
 </body>
